Update 1.1 What is FastQC.html

--- a/Help/1 Introduction/1.1 What is FastQC.html
+++ b/Help/1 Introduction/1.1 What is FastQC.html
@@ -31,7 +31,9 @@ files, or it can be run in a non-interactive mode where it would be suitable
 for integrating into a larger analysis pipeline for the systematic processing
  of large numbers of files.
  </p>
-	<p><a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2 Basic Operations: 2.1 Opening a sequence file</a>
+<p>
+<a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2 Basic Operations: 2.1 Opening a sequence file</a>
+</p>
 </body>
 
 </html>
