--- a/Help/3 Analysis Modules/1 Basic Statistics.html
+++ b/Help/3 Analysis Modules/1 Basic Statistics.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Basic Statistics</title>
+<title>3.1 - Basic Statistics</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<h1>Basic Statistics</h1>
+<h1>3.1 - Basic Statistics</h1>
 <h2>Summary</h2>
 <p>
 The Basic Statistics module generates some simple composition
@@ -21,14 +21,14 @@ statistics for the file analysed.
 <li>File type: Says whether the file appeared to contain actual base calls or
 colorspace data which had to be converted to base calls</li>
 <li>Encoding: Says which ASCII encoding of quality values was found in this
-file.
-</li><li>Total Sequences: A count of the total number of sequences processed.
+file.</li>
+<li>Total Sequences: A count of the total number of sequences processed.
 There are two values reported, actual and estimated.  At the moment these
 will always be the same.  In the future it may be possible to analyse just
 a subset of sequences and estimate the total number, to speed up the analysis,
 but since we have found that problematic sequences are not evenly distributed
 through a file we have disabled this for now.</li>
-<li>Filtered Sequences: If running in Casava mode sequences flagged to be 
+<li>Filtered Sequences: If running in Casava mode sequences flagged to be
 filtered will be removed from all analyses. The number of such sequences
 removed will be reported here. The total sequences count above will not include
 these filtered sequences and will the number of sequences actually used for the
@@ -53,6 +53,35 @@ Basic Statistics never raises an error.
 <p>
 This module never raises warnings or errors
 </p>
-
+<hr />
+<ul>
+	<li><a href="../">FastQC Help Top</a>
+	<ul>
+		<li><a href="../1%20Introduction/1.1%20What%20is%20FastQC.html">1.1 What is FastQC.html</a></li>
+		<li><a href="../2%20Basic%20Operations/">2 Basic Operations</a>
+			<ul>
+				<li><a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2.1 Opening a sequence file</a></li>
+				<li><a href="../2%20Basic%20Operations/2.2%20Evaluating%20Results.html">2.2 Evaluating Results</a></li>
+				<li><a href="../2%20Basic%20Operations/2.3%20Saving%20a%20Report.html">2.3 Saving a Report</a></li>
+			</ul>
+		</li>
+		<li><a href="../3%20Analysis%20Modules/">3 Analysis Modules</a>
+			<ul>
+				<li><a href="../3%20Analysis%20Modules/1%20Basic%20Statistics.html">3.1 Basic Statistics</a></li>
+				<li><a href="../3%20Analysis%20Modules/2%20Per%20Base%20Sequence%20Quality.html">3.2 Per Base Sequence Quality</a></li>
+				<li><a href="../3%20Analysis%20Modules/3%20Per%20Sequence%20Quality%20Scores.html">3.3 Per Sequence Quality Scores</a></li>
+				<li><a href="../3%20Analysis%20Modules/4%20Per%20Base%20Sequence%20Content.html">3.4 Per Base Sequence Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/5%20Per%20Sequence%20GC%20Content.html">3.5 Per Sequence GC Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/6%20Per%20Base%20N%20Content.html">3.6 Per Base N Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/7%20Sequence%20Length%20Distribution.html">3.7 Sequence Length Distribution</a></li>
+				<li><a href="../3%20Analysis%20Modules/8%20Duplicate%20Sequences.html">3.8 Duplicate Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/9%20Overrepresented%20Sequences.html">3.9 Overrepresented Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/10%20Adapter%20Content.html">3.10 Adapter Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/11%20Kmer%20Content.html">3.11 Kmer Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/12%20Per%20Tile%20Sequence%20Quality.html">3.12 Per Tile Sequence Quality</a></li>
+			</ul>
+		</li>
+	</ul>
+</ul>
 </body>
 </html>
