--- a/Help/3 Analysis Modules/10 Adapter Content.html
+++ b/Help/3 Analysis Modules/10 Adapter Content.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Adapter Content</title>
+<title>3.10 - Adapter Content</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,11 +9,11 @@
 </style>
 </head>
 <body>
-<h1>Adapter Content</h1>
+<h1>3.10 - Adapter Content</h1>
 <h2>Summary</h2>
 <p>
 The Kmer Content module will do a generic analysis of all of the Kmers
-in your library to find those which do not have even coverage through 
+in your library to find those which do not have even coverage through
 the length of your reads.  This can find a number of different sources
 of bias in the library which can include the presence of read-through
 adapter sequences building up on the end of your sequences.
@@ -26,15 +26,15 @@ always easy to see if there are other biases present in which you might
 be interested.
 </p>
 <p>
-One obvious class of sequences which you might want to analyse are 
-adapter sequences.  It is useful to know if your library contains a 
-significant amount of adapter in order to be able to assess whether 
-you need to adapter trim or not.  Although the Kmer analysis can 
+One obvious class of sequences which you might want to analyse are
+adapter sequences.  It is useful to know if your library contains a
+significant amount of adapter in order to be able to assess whether
+you need to adapter trim or not.  Although the Kmer analysis can
 theoretically spot this kind of contamination it isn't always clear.
 This module therefore does a specific search for a set of separately
 defined Kmers and will give you a view of the total proportion of your
-library which contain these Kmers.  A results trace will always be 
-generated for all of the sequences present in the adapter config file 
+library which contain these Kmers.  A results trace will always be
+generated for all of the sequences present in the adapter config file
 so you can see the adapter content of your library, even if it's low.
 </p>
 <p>
@@ -60,10 +60,39 @@ than 10% of all reads.
 <h2>Common reasons for warnings</h2>
 <p>
 Any library where a reasonable proportion of the insert sizes are shorter
-than the read length will trigger this module.  This doesn't indicate a 
+than the read length will trigger this module.  This doesn't indicate a
 problem as such - just that the sequences will need to be adapter trimmed
 before proceeding with any downstream analysis.
 </p>
-
+<hr />
+<ul>
+	<li><a href="../">FastQC Help Top</a>
+	<ul>
+		<li><a href="../1%20Introduction/1.1%20What%20is%20FastQC.html">1.1 What is FastQC.html</a></li>
+		<li><a href="../2%20Basic%20Operations/">2 Basic Operations</a>
+			<ul>
+				<li><a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2.1 Opening a sequence file</a></li>
+				<li><a href="../2%20Basic%20Operations/2.2%20Evaluating%20Results.html">2.2 Evaluating Results</a></li>
+				<li><a href="../2%20Basic%20Operations/2.3%20Saving%20a%20Report.html">2.3 Saving a Report</a></li>
+			</ul>
+		</li>
+		<li><a href="../3%20Analysis%20Modules/">3 Analysis Modules</a>
+			<ul>
+				<li><a href="../3%20Analysis%20Modules/1%20Basic%20Statistics.html">3.1 Basic Statistics</a></li>
+				<li><a href="../3%20Analysis%20Modules/2%20Per%20Base%20Sequence%20Quality.html">3.2 Per Base Sequence Quality</a></li>
+				<li><a href="../3%20Analysis%20Modules/3%20Per%20Sequence%20Quality%20Scores.html">3.3 Per Sequence Quality Scores</a></li>
+				<li><a href="../3%20Analysis%20Modules/4%20Per%20Base%20Sequence%20Content.html">3.4 Per Base Sequence Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/5%20Per%20Sequence%20GC%20Content.html">3.5 Per Sequence GC Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/6%20Per%20Base%20N%20Content.html">3.6 Per Base N Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/7%20Sequence%20Length%20Distribution.html">3.7 Sequence Length Distribution</a></li>
+				<li><a href="../3%20Analysis%20Modules/8%20Duplicate%20Sequences.html">3.8 Duplicate Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/9%20Overrepresented%20Sequences.html">3.9 Overrepresented Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/10%20Adapter%20Content.html">3.10 Adapter Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/11%20Kmer%20Content.html">3.11 Kmer Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/12%20Per%20Tile%20Sequence%20Quality.html">3.12 Per Tile Sequence Quality</a></li>
+			</ul>
+		</li>
+	</ul>
+</ul>
 </body>
 </html>
