--- a/Help/3 Analysis Modules/11 Kmer Content.html
+++ b/Help/3 Analysis Modules/11 Kmer Content.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Kmer Content</title>
+<title>3.11 - Kmer Content</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<h1>Kmer Content</h1>
+<h1>3.11 - Kmer Content</h1>
 <h2>Summary</h2>
 <p>
 The analysis of overrepresented sequences will spot an increase in
@@ -25,16 +25,16 @@ exactly duplicated sequences.
 of places within your sequence then this won't be seen either by the
 per base content plot or the duplicate sequence analysis.
 </li>
-</ul> 
+</ul>
 
 <p>
-The Kmer module starts from the assumption that any small fragment 
+The Kmer module starts from the assumption that any small fragment
 of sequence should not have a positional bias in its apearance within
 a diverse library.  There may be biological reasons why certain Kmers
 are enriched or depleted overall, but these biases should affect all
 positions within a sequence equally.  This module therefore measures the
 number of each 7-mer at each position in your library and then uses
-a binomial test to look for significant deviations from an even 
+a binomial test to look for significant deviations from an even
 coverage at all positions.  Any Kmers with positionally biased enrichment
 are reported.  The top 6 most biased Kmer are additionally plotted to
 show their distribution.
@@ -64,14 +64,43 @@ p-value < 10^-5.
 Any individually overrepresented sequences, even if not present at a high enough
 threshold to trigger the overrepresented sequences module will cause the Kmers from
 those sequences to be highly enriched in this module.  These will normally appear
-as sharp spikes of enrichemnt at a single point in the sequence, rather than a 
+as sharp spikes of enrichemnt at a single point in the sequence, rather than a
 progressive or broad enrichment.
 </p>
 <p>
-Libraries which derive from random priming will nearly always show Kmer bias at 
+Libraries which derive from random priming will nearly always show Kmer bias at
 the start of the library due to an incomplete sampling of the possible random
 primers.
 </p>
-
+<hr />
+<ul>
+	<li><a href="../">FastQC Help Top</a>
+	<ul>
+		<li><a href="../1%20Introduction/1.1%20What%20is%20FastQC.html">1.1 What is FastQC.html</a></li>
+		<li><a href="../2%20Basic%20Operations/">2 Basic Operations</a>
+			<ul>
+				<li><a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2.1 Opening a sequence file</a></li>
+				<li><a href="../2%20Basic%20Operations/2.2%20Evaluating%20Results.html">2.2 Evaluating Results</a></li>
+				<li><a href="../2%20Basic%20Operations/2.3%20Saving%20a%20Report.html">2.3 Saving a Report</a></li>
+			</ul>
+		</li>
+		<li><a href="../3%20Analysis%20Modules/">3 Analysis Modules</a>
+			<ul>
+				<li><a href="../3%20Analysis%20Modules/1%20Basic%20Statistics.html">3.1 Basic Statistics</a></li>
+				<li><a href="../3%20Analysis%20Modules/2%20Per%20Base%20Sequence%20Quality.html">3.2 Per Base Sequence Quality</a></li>
+				<li><a href="../3%20Analysis%20Modules/3%20Per%20Sequence%20Quality%20Scores.html">3.3 Per Sequence Quality Scores</a></li>
+				<li><a href="../3%20Analysis%20Modules/4%20Per%20Base%20Sequence%20Content.html">3.4 Per Base Sequence Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/5%20Per%20Sequence%20GC%20Content.html">3.5 Per Sequence GC Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/6%20Per%20Base%20N%20Content.html">3.6 Per Base N Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/7%20Sequence%20Length%20Distribution.html">3.7 Sequence Length Distribution</a></li>
+				<li><a href="../3%20Analysis%20Modules/8%20Duplicate%20Sequences.html">3.8 Duplicate Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/9%20Overrepresented%20Sequences.html">3.9 Overrepresented Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/10%20Adapter%20Content.html">3.10 Adapter Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/11%20Kmer%20Content.html">3.11 Kmer Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/12%20Per%20Tile%20Sequence%20Quality.html">3.12 Per Tile Sequence Quality</a></li>
+			</ul>
+		</li>
+	</ul>
+</ul>
 </body>
 </html>
