--- a/Help/3 Analysis Modules/10 Adapter Content.html
+++ b/Help/3 Analysis Modules/10 Adapter Content.html
@@ -44,6 +44,17 @@ position.  Once a sequence has been seen in a read it is counted as
 being present right through to the end of the read so the percentages
 you see will only increase as the read length goes on.
 </p>
+<p>
+In addition to classic adapter sequences the default configuration also
+includes polyA and polyG as sequences to search for.  PolyA can be useful
+to include when looking at RNA-Seq libraries.  PolyG is present as a
+technical artefact in 2-colour illumina libraries where it is produced 
+when the signal from the cluster disappears.  Both of these sequences
+are generally trimmed from the 3' end of sequences, and are therefore
+removed in a similar way to adapters, hence their inclusion in the default
+configuration.  These sequences can be removed by editing the adapter_list.txt
+file in the Configuration directory.
+</p>
 
 <h2>Warning</h2>
 <p>
