Embed help text into HTML report

--- a/Help/3 Analysis Modules/1 Basic Statistics.html
+++ b/Help/3 Analysis Modules/1 Basic Statistics.html
@@ -21,14 +21,14 @@ statistics for the file analysed.
 <li>File type: Says whether the file appeared to contain actual base calls or
 colorspace data which had to be converted to base calls</li>
 <li>Encoding: Says which ASCII encoding of quality values was found in this
-file.
-</li><li>Total Sequences: A count of the total number of sequences processed.
+file.</li>
+<li>Total Sequences: A count of the total number of sequences processed.
 There are two values reported, actual and estimated.  At the moment these
 will always be the same.  In the future it may be possible to analyse just
 a subset of sequences and estimate the total number, to speed up the analysis,
 but since we have found that problematic sequences are not evenly distributed
 through a file we have disabled this for now.</li>
-<li>Filtered Sequences: If running in Casava mode sequences flagged to be 
+<li>Filtered Sequences: If running in Casava mode sequences flagged to be
 filtered will be removed from all analyses. The number of such sequences
 removed will be reported here. The total sequences count above will not include
 these filtered sequences and will the number of sequences actually used for the
