Sentence case titles

--- a/Help/3 Analysis Modules/1 Basic Statistics.html
+++ b/Help/3 Analysis Modules/1 Basic Statistics.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Basic Statistics</title>
+<title>Basic statistics</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,10 +9,10 @@
 </style>
 </head>
 <body>
-<h1>Basic Statistics</h1>
+<h1>Basic statistics</h1>
 <h2>Summary</h2>
 <p>
-The Basic Statistics module generates some simple composition
+The Basic statistics module generates some simple composition
 statistics for the file analysed.
 </p>
 
@@ -41,12 +41,12 @@ in the set.  If all sequences are the same length only one value is reported.
 
 <h2>Warning</h2>
 <p>
-Basic Statistics never raises a warning.
+Basic statistics never raises a warning.
 </p>
 
 <h2>Failure</h2>
 <p>
-Basic Statistics never raises an error.
+Basic statistics never raises an error.
 </p>
 
 <h2>Common reasons for warnings</h2>
